fix: update filter wrap style

--- a/styles/components/filter-button.scss
+++ b/styles/components/filter-button.scss
@@ -2,16 +2,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
   max-width: 100%;
-  @media (max-width: $br1) {
-    overflow: scroll;
-    justify-content: flex-start;
-    margin-left: -16px;
-    width: calc(100% + 32px);
-    max-width: none;
-    padding-left: 16px;
-    padding-right: 16px;
-  }
+  // @media (max-width: $br1) {
+  //   overflow: scroll;
+  //   justify-content: flex-start;
+  //   margin-left: -16px;
+  //   width: calc(100% + 32px);
+  //   max-width: none;
+  //   padding-left: 16px;
+  //   padding-right: 16px;
+  // }
 }
 
 .filter-button {
@@ -24,16 +26,12 @@
   border-radius: 70px;
   color: var(--s-grey);
   padding: 6px 16px 5px 16px;
-  margin-right: 10px;
+
   opacity: 0.5;
   display: flex;
   white-space: nowrap;
   justify-content: center;
   align-items: center;
-
-  &:last-child {
-    margin-right: 0;
-  }
 
   &--active {
     color: var(--white);
